@@ -501,7 +501,7 @@ name|getLong
 argument_list|(
 literal|"hbase.master.avgload.logging.period"
 argument_list|,
-literal|15000
+literal|60000
 argument_list|)
 expr_stmt|;
 block|}
