@@ -111,6 +111,7 @@ Release 0.19.0 - Unreleased
    HBASE-983   Declare Perl namespace in Hbase.thrift
    HBASE-987   We need a Hbase Partitioner for TableMapReduceUtil.initTableReduceJob
                MR Jobs (Billy Pearson via Stack)
+   HBASE-993   Turn of logging of every catalog table row entry on every scan
         
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
